Added interface to miditoabc translation
also:
1) Migrated to Play 2.3.8 and argonaut 6.1
2) Removed dependency on scalaz
3) Upgraded to dispatch 0.11.2 (in spite of its continued lack of documentation)
   This version uses Futures in the proxied backend calls.
4) Minor UI bugfixes

--- a/.gitignore
+++ b/.gitignore
@@ -1,18 +1,18 @@
-# Ignore all dotfiles...
-.*
-# except for .gitignore
-!.gitignore
-
-/.idea/
-/project/boot/
-/project/plugins/project
-target/
-cache/
-logs/
-deprecated/
-dist/
-lib_managed/
-src_managed/
-test-output/
-*.iml
-build.sbt.1.1M8
+logs
+project/project
+project/target
+target
+cache
+logs
+deprecated
+tmp
+.history
+dist
+/.idea
+/*.iml
+/out
+/.idea_modules
+/.classpath
+/.project
+/RUNNING_PID
+/.settings
