--- a/conf/application.conf
+++ b/conf/application.conf
@@ -35,10 +35,15 @@ logger.root=ERROR
 logger.play=INFO
 
 # Logger provided to your application:
-logger.application=INFO
+logger.application=DEBUG
 
 # tradtunestore specific configurations
 #musicrest.server="localhost:8080/musicrest/"
-musicrest.server="192.168.1.64:8080/musicrest/"
+#musicrest.server="www.tradtunedb.org.uk:8080/musicrest/"
+musicrest.server="192.168.0.101:8080/musicrest/"
+musicrest.timeout=2500
+data.home="/var/data/midi2abc"
+midi2abc.username="midi2abc"
+midi2abc.password="3ut3rp3a"
  
 
