--- a/project/build.properties
+++ b/project/build.properties
@@ -1,1 +1,4 @@
-sbt.version=0.13.0
+#Activator-generated Properties
+#Sun May 17 09:52:13 BST 2015
+template.uuid=76d230da-6695-4b50-af20-989fa70fdbb1
+sbt.version=0.13.5
