--- a/project/build.properties
+++ b/project/build.properties
@@ -1,4 +1,4 @@
 #Activator-generated Properties
-#Sun May 17 09:52:13 BST 2015
-template.uuid=76d230da-6695-4b50-af20-989fa70fdbb1
-sbt.version=0.13.5
+#Sat Mar 12 07:46:27 GMT 2016
+template.uuid=1c7228d8-76c3-4463-9912-bafe53ed6b37
+sbt.version=0.13.11
